--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
-    "symfony/property-access": "^5.3"
+    "php": ">=8.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
