--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "phpunit/phpunit": "^9.0",
     "vimeo/psalm": "^4.0",
     "friendsofphp/php-cs-fixer": "^3.0",
-    "psalm/plugin-phpunit": "^0.16.1",
+    "psalm/plugin-phpunit": "^0.16",
     "jetbrains/phpstorm-attributes": "^1.0"
   },
   "autoload": {
@@ -32,6 +32,9 @@
       "Yadddl\\ValueObject\\": "tests/",
       "Yadddl\\ValueObject\\Examples\\": "examples/"
     }
+  },
+  "suggest": {
+    "yadddl/serializer": "In order to serialize the objects"
   },
   "scripts": {
     "test": "phpunit",
