--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,14 @@
     }
   ],
   "require": {
-    "php": ">=8.0"
+    "php": ">=8.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
-    "vimeo/psalm": "^4.0",
-    "friendsofphp/php-cs-fixer": "^3.0",
-    "psalm/plugin-phpunit": "^0.16",
+    "vimeo/psalm": "^5.9",
+    "friendsofphp/php-cs-fixer": "^3.16",
     "jetbrains/phpstorm-attributes": "^1.0",
-    "phpstan/phpstan": "^1.2"
+    "phpstan/phpstan": "^1.10",
+    "pestphp/pest": "^2.5"
   },
   "autoload": {
     "psr-4": {
@@ -50,5 +49,10 @@
       "@psalm",
       "@test"
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   }
 }
