--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,11 +4,14 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Validate composer.json and composer.lock
+      with:
+        php-version: '8.2'
       run: composer validate
+
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v2
@@ -17,12 +20,21 @@ jobs:
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
+
     - name: Install dependencies
+      with:
+        php-version: '8.2'
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
     - name: Run test suite
+      with:
+        php-version: '8.2'
       run: composer run test
     - name: Run code sniffer check
+      with:
+        php-version: '8.2'
       run: composer run cs-check
     - name: Run psalm
+      with:
+        php-version: '8.2'
       run: composer run psalm
