--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -6,35 +6,27 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Validate composer.json and composer.lock
-      with:
-        php-version: '8.2'
-      run: composer validate
-
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      with:
-        php-version: '8.2'
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
-    - name: Run test suite
-      with:
-        php-version: '8.2'
-      run: composer run test
-    - name: Run code sniffer check
-      with:
-        php-version: '8.2'
-      run: composer run cs-check
-    - name: Run psalm
-      with:
-        php-version: '8.2'
-      run: composer run psalm
+      - uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+      - name: Validate composer.json and composer.lock
+        run: composer validate
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v2
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+      - name: Install dependencies
+        if: steps.composer-cache.outputs.cache-hit != 'true'
+        run: composer install --prefer-dist --no-progress --no-suggest
+      - name: Run test suite
+        run: composer run test
+      - name: Run code sniffer check
+        run: composer run cs-check
+      - name: Run psalm
+        run: composer run psalm
